Import of JASONK/Geo-ShapeFile-2.52 from CPAN.
gitpan-cpan-distribution: Geo-ShapeFile
gitpan-cpan-version:      2.52
gitpan-cpan-path:         JASONK/Geo-ShapeFile-2.52.tar.gz
gitpan-cpan-author:       JASONK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,16 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Geo-ShapeFile
-version:      2.51
-version_from: ShapeFile.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Geo-ShapeFile
+version:             2.52
+abstract:            Perl extension for handling ESRI GIS Shapefiles.
+license:             ~
+generated_by:        ExtUtils::MakeMaker version 6.36
+distribution_type:   module
+requires:     
     Carp:                          0
     IO::File:                      0
     Math::Trig:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Jason Kohles <email@jasonkohles.com>
