--- a/META.yml
+++ b/META.yml
@@ -4,7 +4,7 @@ author:
   - 'Shawn Laffan <shawnlaffan@gmail.com>'
 build_requires: {}
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120630'
+generated_by: 'ExtUtils::MakeMaker version 6.64, CPAN::Meta::Converter version 2.132830'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,4 +16,4 @@ no_index:
     - inc
 resources:
   repository: https://github.com/shawnlaffan/Geo-ShapeFile.git
-version: 2.55_001
+version: 2.56
